projects/FollowUpAppointment/force-app/main/default/objects/FollowupAppointmentSettings__c/fields/Fields_To_Show_Page_1__c.field-meta.xml
<CustomField>
    <fullName>Fields_To_Show_Page_1__c</fullName>
    <label>Fields To Show Page 1</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>