projects/FollowUpAppointment/force-app/main/default/objects/FollowupAppointmentSettings__c/fields/Operating_Hours__c.field-meta.xml
<CustomField>
    <fullName>Operating_Hours__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Operating Hours</label>
    <referenceTo>OperatingHours</referenceTo>
    <relationshipLabel>FollowupAppointmentSettings</relationshipLabel>
    <relationshipName>FollowupAppointmentSettings</relationshipName>
    <type>Lookup</type>
</CustomField>