projects/FollowUpAppointment/force-app/main/default/objects/FollowupAppointmentSettings__c/fields/Scheduling_Horizon_Value__c.field-meta.xml
<CustomField>
    <fullName>Scheduling_Horizon_Value__c</fullName>
    <label>Scheduling Horizon Value</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>