projects/FollowUpAppointment/force-app/main/default/objects/FollowupAppointmentSettings__c/fields/Scheduling_Policy__c.field-meta.xml
<CustomField>
    <fullName>Scheduling_Policy__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Scheduling Policy</label>
    <referenceTo>FSL__Scheduling_Policy__c</referenceTo>
    <relationshipLabel>FollowupAppointmentSettings</relationshipLabel>
    <relationshipName>FollowupAppointmentSettings</relationshipName>
    <type>Lookup</type>
</CustomField>