projects/FollowUpAppointment/force-app/main/default/objects/FollowupAppointmentSettings__c/fields/Screen_Title_1__c.field-meta.xml
<CustomField>
    <fullName>Screen_Title_1__c</fullName>
    <label>Screen Title 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>