projects/FollowUpAppointment/force-app/main/default/objects/FollowupAppointmentSettings__c/fields/Screen_Title_2__c.field-meta.xml
<CustomField>
    <fullName>Screen_Title_2__c</fullName>
    <label>Screen Title 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>