projects/FollowUpAppointment/force-app/main/default/objects/FollowupAppointmentSettings__c/fields/Technician_Assigment__c.field-meta.xml
<CustomField>
    <fullName>Technician_Assigment__c</fullName>
    <label>Technician Assigment</label>
    <length>255</length>
    <type>Text</type>
</CustomField>